--- a/排序算法/pom.xml
+++ b/排序算法/pom.xml
@@ -114,6 +114,11 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.21</version>
         </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+        </dependency>
 
     </dependencies>
 
